--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
     "@types/node": "^16.18.36",
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
-    "@types/react-select": "^5.0.1",
+    "antd": "^5.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-redux": "^8.1.0",
     "react-scripts": "5.0.1",
-    "react-select": "^5.7.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
